--- a/01-life-expectancy-gdp/life_expectancy_gdp.ipynb
+++ b/01-life-expectancy-gdp/life_expectancy_gdp.ipynb
@@ -4,9 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Life Expectancy vs GDP\n",
-    "* Natural Log was taken from GDP and plotted on a line graph\n",
-    "* Interestingly, "
+    "# 0. Life Expectancy vs GDP\n",
+    "\n",
+    "This visualization project aims to highlight the relationship between GDP and Life Expectancy and explore the differences between 6 key countries:\n",
+    "* Chile\n",
+    "* China\n",
+    "* Germany\n",
+    "* Mexico\n",
+    "* United States of America\n",
+    "* Zimbabwe"
    ]
   },
   {
@@ -53,7 +59,7 @@
     }
    ],
    "source": [
-    "# Import Dataframe\n",
+    "# Read in data\n",
     "df_main = pd.read_csv('all_data.csv')\n",
     "\n",
     "# Preview Data\n",
@@ -112,7 +118,7 @@
     "# Rename columns\n",
     "df_main.columns = ['country', 'year', 'life_expectancy', 'gdp']\n",
     "\n",
-    "# Convert gdp to log values\n",
+    "# Encode gdp to log values\n",
     "df_main['gdp_log'] = np.log(df_main.gdp)\n",
     "df_main.head()"
    ]
@@ -361,6 +367,17 @@
     "plt.show()\n",
     "fig3.savefig('Images/life_expectancy_prediction.svg', dpi=150)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Conclusions\n",
+    "* Zimbabwe and Germany has higher life expectancy when compared to the USA in relation with GDP.\n",
+    "* In this dataset, USA leads with the highest GDP over this time series but lags in life expectancy."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
